--- a/input.css
+++ b/input.css
@@ -9,4 +9,10 @@
     left: 30%;
     @apply absolute rounded-l-full top-52 bg-softBlue;
   }
+  /* .bg-tabs {
+    width: 2000px;
+    height: 300px;
+    right: 60%;
+    @apply absolute rounded-r-full top-60 bg-softBlue;
+  } */
 }
